<?xml version="1.0"?>
<package format="2">
  <name>air_arm_control</name>
  <version>0.0.0</version>
  <description>The air_arm_control package</description>

  <maintainer email="naci@todo.todo">naci</maintainer>

  <license>TODO</license>

  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rosparam_shortcuts</depend>

  <depend>moveit_core</depend>
  <depend>moveit_ros_planning_interface</depend>

  <depend>moveit_task_constructor_core</depend>

  <exec_depend>moveit_task_constructor_capabilities</exec_depend>
  <exec_depend>moveit_resources_panda_moveit_config</exec_depend>
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
